--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
+    "parcel": "^2.3.2",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "preact": "^10.6.6"
   }
 }
