--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "autocompile": "npx tsc --watch",
     "lint": "eslint . --ext .ts,.tsx",
     "start": "npx parcel src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npx parcel build src/index.html --public-url ."
   },
   "keywords": [],
@@ -14,10 +14,13 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.3.2",
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
+    "jest": "^27.5.1",
     "parcel": "^2.3.2",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
   "dependencies": {
